<resources>
    <string name="app_name">RGGP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="there_are_some_pictures_of_our_college_which_is_taken_on_cultural_events">There are some pictures of our institute which is taken on Cultural Events.</string>
    <string name="college_staff">COLLEGE STAFF</string>
    <string name="todo">TODO</string>
    <string name="head_of_departments">HEAD OF DEPARTMENTS</string>
    <string name="mr_sandeep_kumar_te">Mr. Sandeep Singh (TE)</string>
    <string name="student">Students</string>
    <string name="priyanka_choudhary_cse">Smt. Priyanka Choudhary (CSE)</string>
    <string name="radheshyam_bishnoi_ce">Mr. Radheshyam Bishnoi (CE)</string>
    <string name="mr_rahul_singla_ee">Mr. Rahul Singla (EE)</string>
    <string name="mr_anil_monga_me">Mr. Anil Monga (ME)</string>
    <string name="mr_sandeep_kumar_tt">Mr. Sandeep Singh (TT)</string>
    <string name="ayush_and_aaditya">Ayush And Aaditya</string>
    <string name="computer_engg">Branch : Computer Engg.</string>
    <string name="ayush_nain">Name : Ayush Nain</string>
    <string name="aaditya_kumar">Name : Aaditya Kumar</string>
    <string name="gpnarwana_ac_in">gpnarwana.ac.in</string>
    <string name="rggp">RGGP</string>
    <string name="rajiv_gandhi_govt_polytechnic_narwana">Rajiv Gandhi Govt. Polytechnic, Narwana</string>
    <string name="approved_by_aicte_new_delhi_amp_govt_of_haryana_affiliated_to_hsbte_panchkula"><![CDATA[(approved by aicte, new delhi & govt. of haryana, affiliated to hsbte panchkula.)]]></string>
    <string name="principle_message">principle message</string>
    <string name="it_s_an_immense_pleasure_to_welcome_you_all_to_rajiv_gandhi_govt_polytechnic_narwana_we_aim_to_provide_quality_technical_educationwith_great_emphasis_on_human_values_technical_professional_entrepreneurial_skills_for_sustainable_growth_of_society_and_nation_as_a_whole_we_believe_that_the_purpose_of_education_is_to_facillitate_the_development_of_clarity_of_aspirations_and_adequate_competence_to_actualize_it_since_its_establishment_in_2009_the_institute_has_made_its_presence_strongly_felt_in_the_technical_education_community_not_only_in_the_region_but_at_state_level_too_a_range_of_achievement_in_academics_in_all_six_branches_is_attained_by_joint_efforts_of_all_stake_holders_our_very_young_alumni_continue_to_keep_the_institute_name_high">It\'s an immense pleasure to welcome you all to Rajiv Gandhi Govt. Polytechnic, Narwana. We aim to provide quality technical educationwith great emphasis on human values, technical, professional, entrepreneurial skills for sustainable growth of society and nation as a whole. We believe that the purpose of education is to facillitate the development of clarity of aspirations and adequate competence to actualize it. Since its establishment in 2009, the institute has made its presence strongly felt in the technical education community not only in the region but at state level too. A range of achievement in academics in all six branches is attained by joint efforts of all stake holders. Our very young alumni continue to keep the institute name high.</string>
    <string name="courses">Courses</string>
    <string name="our_courses">Our Courses</string>
    <string name="civil_engineering">Civil Engineering</string>
    <string name="computer_engineering">Computer Engineering</string>
    <string name="electrical_engineering">Electrical Engineering</string>
    <string name="mechanical_engineering">Mechanical Engineering</string>
    <string name="textile_design">Textile Design</string>
    <string name="textile_technology">Textile Technology</string>
    <string name="about_us">About Us</string>
    <string name="comp_article1">Computer engineering is a dynamic discipline that integrates principles of electrical engineering and computer science to design, develop, and maintain computer systems and hardware. It focuses on creating innovative solutions for complex computing challenges, ranging from microprocessors and embedded systems to high-performance computing and artificial intelligence applications.</string>
    <string name="comp_article2">Computer engineers design hardware components such as processors, circuit boards, and memory systems while also working on software development, including operating systems and firmware. They play a vital role in optimizing the interaction between hardware and software, ensuring systems perform efficiently and reliably. </string>
    <string name="our_teachers">Our Teachers</string>
    <string name="comp_article3">This field underpins technological advancements in diverse industries, including healthcare, automotive, telecommunications, and robotics. Computer engineers also address emerging challenges such as cybersecurity, sustainable computing, and machine learning integration. With its blend of technical expertise and creative problem-solving, computer engineering drives innovation, shaping the future of technology and its impact on society.</string>
    <string name="teachers">Teachers are the foundation of education and play an essential role in nurturing the intellectual, emotional, and social development of students. They are more than educators—they are mentors, guides, and role models who inspire and influence young minds to achieve their full potential. We have following teachers:</string>
    <string name="_1_smt_priyanka_choudhary_hod">1. Smt. Priyanka Choudhary (HOD)</string>
    <string name="_1_mr_rahul">1. Mr. Rahul Singla (HOD)</string>
    <string name="_2_mr_jitendra_mor">2. Mr. Jitendra Mor</string>
    <string name="_3_mr_ajay_malik">3. Mr. Ajay Malik</string>
    <string name="_4_mr_arun">4. Mr. Arun Sharma</string>
    <string name="elect1">Electrical engineering is a versatile and impactful field focused on the study, design, and application of systems and devices powered by electricity, electronics, and electromagnetism. It encompasses a wide range of areas, including power generation and distribution, communication systems, electronics, control systems, and renewable energy technologies.

</string>
    <string name="elec2">This discipline combines theoretical knowledge with practical problem-solving to create systems that improve everyday life, from household appliances to complex industrial machinery. Electrical engineers are key contributors to technological progress, ensuring that electrical systems are reliable, efficient, and safe. Their expertise drives advancements in sectors like healthcare, transportation, telecommunications, and renewable energy.</string>
    <string name="elec3">Electrical engineers design and develop critical infrastructure such as power grids, motors, and circuits, as well as advanced technologies like semiconductors, robotics, and wireless communication systems. They play a pivotal role in innovating energy-efficient solutions and addressing global challenges, such as sustainable energy and smart technology integration.</string>
    <string name="_2_ravi_kalra">2. Mr. Ravi Kalra</string>
    <string name="_3_sanpreet_kaur">3. Ms. Sunpreet Kaur</string>
    <string name="_4_alka_kalra">4. Mrs. Alka Kalra</string>
    <string name="_5_mr_sandeep_kumar">5. Mr. Sandeep Kumar</string>
    <string name="textile_engineering">Textile Engineering</string>
    <string name="textile_engineering_is_a_specialized_field_that_combines_principles_of_engineering_chemistry_and_material_science_to_design_develop_and_optimize_textile_products_and_manufacturing_processes_it_focuses_on_the_creation_of_fibers_fabrics_and_garments_as_well_as_advanced_textile_applications_in_industries_like_automotive_healthcare_and_aerospace">Textile engineering is a specialized field that combines principles of engineering, chemistry, and material science to design, develop, and optimize textile products and manufacturing processes. It focuses on the creation of fibers, fabrics, and garments, as well as advanced textile applications in industries like automotive, healthcare, and aerospace.</string>
    <string name="textile_engineers_work_with_natural_and_synthetic_fibers_to_develop_materials_with_desired_properties_such_as_durability_elasticity_and_thermal_resistance_they_also_innovate_in_areas_like_smart_textiles_which_integrate_electronics_and_sensors_and_sustainable_textiles_which_use_eco_friendly_materials_and_processes_to_reduce_environmental_impact">Textile engineers work with natural and synthetic fibers to develop materials with desired properties, such as durability, elasticity, and thermal resistance. They also innovate in areas like smart textiles, which integrate electronics and sensors, and sustainable textiles, which use eco-friendly materials and processes to reduce environmental impact.</string>
    <string name="this_field_encompasses_various_aspects_including_yarn_production_fabric_weaving_and_knitting_dyeing_finishing_and_quality_control_textile_engineers_play_a_crucial_role_in_advancing_technology_for_functional_clothing_protective_gear_and_technical_fabrics_their_work_enhances_everyday_products_and_drives_innovation_across_industries_making_textiles_both_practical_and_cutting_edge">This field encompasses various aspects, including yarn production, fabric weaving and knitting, dyeing, finishing, and quality control. Textile engineers play a crucial role in advancing technology for functional clothing, protective gear, and technical fabrics. Their work enhances everyday products and drives innovation across industries, making textiles both practical and cutting-edge.</string>
    <string name="_1_mr_sunil_sheoran">1. Mr. Sunil Sheoran</string>
    <string name="_2_mr_rajesh_saini">2. Mr. Rajesh Saini</string>
    <string name="_3_ranbir_kundu">3. Ranbir Kundu</string>
    <string name="_4_mr_jagbir">4. Mr. Jagbir</string>
</resources>