<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/baseline_course_24"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/about_us"/>
    </group>
</menu>