<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.course.Course">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#C80000"
            android:text="@string/our_courses" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_marginTop="10dp"
            android:src="@drawable/computer_engg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#C80000"
            android:text="@string/computer_engineering" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_marginTop="10dp"
            android:src="@drawable/civil_engg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#C80000"
            android:text="@string/civil_engineering" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_marginTop="10dp"
            android:src="@drawable/electrical_engg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#C80000"
            android:text="@string/electrical_engineering" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_marginTop="10dp"
            android:src="@drawable/mechanical_engg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#C80000"
            android:text="@string/mechanical_engineering" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_marginTop="10dp"
            android:src="@drawable/textile_design"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#C80000"
            android:text="@string/textile_design" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:layout_marginTop="10dp"
            android:src="@drawable/textile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#C80000"
            android:text="@string/textile_technology" />
    </LinearLayout>
</ScrollView>